RESOLVED FIXED 91608
[EFL][WK2] Too early assertion failure if default theme is not available
https://bugs.webkit.org/show_bug.cgi?id=91608
Summary [EFL][WK2] Too early assertion failure if default theme is not available
Dominik Röttsches (drott)
Reported 2012-07-18 03:10:04 PDT
After bug 90107 we're setting a default theme path, which leads to a "themeChanged()" call initializing createEdje() - if that theme path is not available we run into a premature assertion failure. We need to give the embedder a chance to override the theme path before failing - so only the usages of m_edje should be guarded with assertions.
Attachments
Patch (2.15 KB, patch)
2012-07-18 03:45 PDT, Dominik Röttsches (drott)
no flags
Dominik Röttsches (drott)
Comment 1 2012-07-18 03:45:38 PDT
WebKit Review Bot
Comment 2 2012-07-18 04:30:50 PDT
Comment on attachment 152978 [details] Patch Clearing flags on attachment: 152978 Committed r122946: <http://trac.webkit.org/changeset/122946>
WebKit Review Bot
Comment 3 2012-07-18 04:30:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.