[EFL][WK2] Too early assertion failure if default theme is not available https://bugs.webkit.org/show_bug.cgi?id=91608

Patch by Dominik Röttsches <dominik.rottsches@intel.com> on 2012-07-18
Reviewed by Kenneth Rohde Christiansen.

After bug 90107 we're setting a default theme path, which leads to a
themeChanged() call initializing edje in createEdje() - if that theme
path is not available we run into a premature assertion failure.
We need to give the embedder a chance to override the default theme path
before failing - so only the usages of m_edje should be guarded with assertions.

No new tests, no change in rendering behavior.

* platform/efl/RenderThemeEfl.cpp:
(WebCore::RenderThemeEfl::themePartCacheEntryReset): Adding an assertion to ensure m_edje is present - so that all usages of m_edje are now guarded.
(WebCore::RenderThemeEfl::createEdje): Not hitting assertion if theme path doesn't contain the theme object file, allowing the embedder to override with a new path.

Canonical link: https://commits.webkit.org/109404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122946 268f45cc-cd09-0410-ab3c-d52691b4dbfc